<resources>
    <string name="app_name">RukiaFilms</string>
    <string name="action_settings">Settings</string>
    <string name="menu_popularity">Most popular</string>
    <string name="menu_top_rated">Top Rated</string>

    <string name="movie_url" translatable="false">http://api.themoviedb.org/3/movie/</string>
    <string name="default_movie">Movie poster</string>


    <string name="fastscroller_track" translatable="false">FastScroller track</string>
    <string name="fastscroller_handle" translatable="false">FastScroller handle</string>

    <string name="movies">%1$d movies</string>
    <string name="action_favourite">Favourite button</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="null_content_description" />
    <string name="image_of_the_movie">Movie poster</string>
    <string name="overview">Overview</string>
    <string name="videos">Videos</string>
    <string name="comming_soon">Comming soon...</string>
    <string name="reviews">Reviews</string>

    <string name="imagine" translatable="false">IMAGINE</string>
    <string name="soft" translatable="false">SOFT</string>
    <string name="rukia" translatable="false">RUKIA</string>
    <string name="create" translatable="false">CREATE</string>
</resources>
