<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_description_cards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.MovieDetailActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/card_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_cardview"
        android:layout_marginLeft="@dimen/margin_cardview"
        android:layout_marginRight="@dimen/margin_cardview"
        android:layout_marginTop="@dimen/margin_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_movie_detail_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_movie_poster"
                tools:src="@mipmap/ic_launcher"
                android:layout_weight="30"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_movie_original_title"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_movie_detail_poster"
                    android:layout_toEndOf="@+id/image_movie_detail_poster"
                    android:layout_toRightOf="@+id/image_movie_detail_poster"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    tools:text="Original movie title"/>

                <TextView
                    android:id="@+id/text_movie_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/spacing_medium"
                    android:layout_toEndOf="@+id/image_movie_detail_poster"
                    android:layout_toRightOf="@+id/image_movie_detail_poster"
                    android:layout_below="@id/text_movie_original_title"
                    android:gravity="center"
                    android:textSize="42sp"
                    tools:text="10.0"/>

                <TextView
                    android:id="@+id/text_movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_toEndOf="@+id/image_movie_detail_poster"
                    android:layout_toRightOf="@+id/image_movie_detail_poster"
                    android:layout_below="@id/text_movie_vote_average"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    tools:text="Release date: 08.10.2015"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_Overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_cardview"
        android:layout_marginRight="@dimen/margin_cardview"
        android:layout_marginBottom="@dimen/margin_below_cardview"
        android:clickable="false"
        android:focusable="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/overview_title_cardview"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:textColor="@color/ColorDescriptions"
                android:text="@string/overview"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:src="@drawable/ic_tip_36dp"
                android:tint="@color/ColorDescriptions"
                android:contentDescription="@string/overview"/>
            <TextView
                android:id="@+id/overview_body_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_below="@id/overview_title_cardview"
                android:paddingBottom="@dimen/margin_cardview"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_cardview"
        android:layout_marginRight="@dimen/margin_cardview"
        android:layout_marginBottom="@dimen/margin_below_cardview"
        android:clickable="false"
        android:focusable="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/videos_title_cardview"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:textColor="@color/ColorDescriptions"
                android:text="@string/videos"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/margin_cardview"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:src="@drawable/ic_movie_black_36dp"
                android:tint="@color/ColorDescriptions"
                android:contentDescription="@string/videos"/>
            <TextView
                android:id="@+id/listview_videos_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/spacing_medium"
                android:layout_below="@+id/videos_title_cardview"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/comming_soon"/>

            <!--<LinearLayout
                android:id="@+id/listview_steps_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/videos_title_cardview"
                >
            </LinearLayout>-->
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_cardview"
            android:layout_marginRight="@dimen/margin_cardview"
            android:layout_marginBottom="@dimen/margin_below_cardview"
            android:clickable="false"
            android:focusable="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/reviews_title_cardview"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:textColor="@color/ColorDescriptions"
                android:text="@string/reviews"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/margin_cardview"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin_text_cardview"
                android:layout_marginRight="@dimen/margin_text_cardview"
                android:layout_marginTop="@dimen/margin_text_cardview"
                android:layout_marginBottom="@dimen/margin_text_cardview"
                android:src="@drawable/ic_procedure_32"
                android:tint="@color/ColorDescriptions"
                android:contentDescription="@string/reviews"/>
            <LinearLayout
                android:id="@+id/listview_reviews_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/reviews_title_cardview"
                >
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>